Update: integrated db and cache for updating ranking
